--- a/app/globals.css
+++ b/app/globals.css
@@ -19,6 +19,19 @@
     }
   }
 }
+.multiLineLabel {
+  display: inline-block;
+  box-sizing: border-box;
+  white-space: pre-line;
+  word-wrap: break-word;
+}
+
+.multiLineLabel .textMaxLine {
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 4;
+  overflow: hidden;
+}
 
 @layer base {
   * {
