--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -16,7 +17,22 @@
   white-space: pre-line;
   word-wrap: break-word;
 }
+.hiddenscroll{
 
+    overflow-y: scroll;
+    scrollbar-width: none; /* Firefox */
+    -ms-overflow-style: none;  /* Internet Explorer 10+ */
+
+
+
+}
+.font-poppins{
+  font-family: 'Poppins', monospace;
+}
+.hiddenscroll::-webkit-scrollbar { /* WebKit */
+  width: 0;
+  height: 0;
+}
 select {
   -moz-appearance:none; /* Firefox */
     -webkit-appearance:none; /* Safari and Chrome */
