--- a/app/globals.css
+++ b/app/globals.css
@@ -19,6 +19,9 @@
 }
 .hiddenscroll{
 
+    
+    
+    
     overflow-y: scroll;
     scrollbar-width: none; /* Firefox */
     -ms-overflow-style: none;  /* Internet Explorer 10+ */
@@ -26,12 +29,21 @@
 
 
 }
+.disable-scrollbars::-webkit-scrollbar {
+  background: transparent; /* Chrome/Safari/Webkit */
+  width: 0px;
+}
+    
+.disable-scrollbars {
+  overflow-x: auto;
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none;  /* IE 10+ */
+}
 .font-poppins{
   font-family: 'Poppins', monospace;
 }
 .hiddenscroll::-webkit-scrollbar { /* WebKit */
-  width: 0;
-  height: 0;
+  display:none
 }
 select {
   -moz-appearance:none; /* Firefox */
