--- a/app/globals.css
+++ b/app/globals.css
@@ -29,6 +29,17 @@
 
 
 }
+.hiddeninput{
+ 
+    display: none !important;
+}
+
+.img-wrap{
+ 
+  overflow: hidden;
+ 
+}
+  
 .disable-scrollbars::-webkit-scrollbar {
   background: transparent; /* Chrome/Safari/Webkit */
   width: 0px;
