--- a/app/globals.css
+++ b/app/globals.css
@@ -17,6 +17,19 @@
   white-space: pre-line;
   word-wrap: break-word;
 }
+
+.noSelect {
+    -webkit-tap-highlight-color: transparent;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+.noSelect:focus {
+    outline: none !important;
+}
 .hiddenscroll{
 
     
