--- a/app/globals.css
+++ b/app/globals.css
@@ -3,7 +3,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
+.font-pops {
+  font-family: 'Poppins', sans-serif;
+}
 .font-inter{
   font-family: 'Inter', sans-serif;
 }
