--- a/app/globals.css
+++ b/app/globals.css
@@ -48,6 +48,24 @@
 
 
 }
+.fix-overflow{
+  word-break: break-word;
+  white-space: initial;
+}
+.two-line-ellipsis {
+  overflow: hidden;
+  width: 100%;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+}
+.four-line-ellipsis {
+  overflow: hidden;
+  width: 100%;
+  display: -webkit-box;
+  -webkit-line-clamp: 4;
+  -webkit-box-orient: vertical;
+}
 .hiddeninput{
  
     display: none !important;
