--- a/app/globals.css
+++ b/app/globals.css
@@ -1,13 +1,13 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 .font-pops {
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
 }
-.font-inter{
-  font-family: 'Inter', sans-serif;
+.font-inter {
+  font-family: "Inter", sans-serif;
 }
 @layer base {
   :root {
@@ -25,30 +25,23 @@
 }
 
 .noSelect {
-    -webkit-tap-highlight-color: transparent;
-    -webkit-touch-callout: none;
-    -webkit-user-select: none;
-    -khtml-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
+  -webkit-tap-highlight-color: transparent;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 .noSelect:focus {
-    outline: none !important;
+  outline: none !important;
 }
-.hiddenscroll{
-
-    
-    
-    
-    overflow-y: scroll;
-    scrollbar-width: none; /* Firefox */
-    -ms-overflow-style: none;  /* Internet Explorer 10+ */
-
-
-
+.hiddenscroll {
+  overflow-y: scroll;
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none; /* Internet Explorer 10+ */
 }
-.fix-overflow{
+.fix-overflow {
   word-break: break-word;
   white-space: initial;
 }
@@ -66,37 +59,35 @@
   -webkit-line-clamp: 4;
   -webkit-box-orient: vertical;
 }
-.hiddeninput{
- 
-    display: none !important;
+.hiddeninput {
+  display: none !important;
 }
 
-.img-wrap{
- 
+.img-wrap {
   overflow: hidden;
- 
 }
-  
+
 .disable-scrollbars::-webkit-scrollbar {
   background: transparent; /* Chrome/Safari/Webkit */
   width: 0px;
 }
-    
+
 .disable-scrollbars {
   overflow-x: auto;
   scrollbar-width: none; /* Firefox */
-  -ms-overflow-style: none;  /* IE 10+ */
+  -ms-overflow-style: none; /* IE 10+ */
 }
-.font-poppins{
-  font-family: 'Inter', monospace;
+.font-poppins {
+  font-family: "Inter", monospace;
 }
-.hiddenscroll::-webkit-scrollbar { /* WebKit */
-  display:none
+.hiddenscroll::-webkit-scrollbar {
+  /* WebKit */
+  display: none;
 }
 select {
-  -moz-appearance:none; /* Firefox */
-    -webkit-appearance:none; /* Safari and Chrome */
-    appearance:none;
+  -moz-appearance: none; /* Firefox */
+  -webkit-appearance: none; /* Safari and Chrome */
+  appearance: none;
 }
 
 .multiLineLabel .textMaxLine {
