--- a/app/globals.css
+++ b/app/globals.css
@@ -42,6 +42,11 @@
   scrollbar-width: none; /* Firefox */
   -ms-overflow-style: none; /* Internet Explorer 10+ */
 }
+.hiddenxscroll {
+  overflow-x: scroll;
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none; /* Internet Explorer 10+ */
+}
 .fix-overflow {
   word-break: break-word;
   white-space: initial;
