--- a/app/globals.css
+++ b/app/globals.css
@@ -70,10 +70,7 @@
   -webkit-box-orient: vertical;
 }
 .mainbg{
- background-image: url('/gradient.svg');
- background-size: cover;
- background-position: center;
- background-repeat: no-repeat;
+ background-color: black;
 }
 
 .hiddeninput {
