--- a/app/globals.css
+++ b/app/globals.css
@@ -128,6 +128,10 @@
   /* WebKit */
   display: none;
 }
+.hiddenxscroll::-webkit-scrollbar {
+  /* WebKit */
+  display: none;
+}
 select {
   -moz-appearance: none; /* Firefox */
   -webkit-appearance: none; /* Safari and Chrome */
@@ -168,3 +172,28 @@ input[type="search"]::-webkit-search-decoration,
 input[type="search"]::-webkit-search-cancel-button,
 input[type="search"]::-webkit-search-results-button,
 input[type="search"]::-webkit-search-results-decoration { display: none; }
+.parent-container {
+  overflow-x: hidden; /* Prevent overflow on the X axis */
+  width: 100%;
+}
+.stories-container {
+  display: flex;
+  overflow-x: auto; /* Enable horizontal scrolling */
+  white-space: nowrap; /* Prevent line breaks within the children */
+  -webkit-overflow-scrolling: touch; /* Smooth scrolling on iOS */
+}
+
+.stories-container::-webkit-scrollbar {
+  display: none; /* Hide scrollbar for Chrome, Safari, and Opera */
+}
+
+.stories-container {
+  -ms-overflow-style: none; /* Hide scrollbar for IE and Edge */
+  scrollbar-width: none; /* Hide scrollbar for Firefox */
+}
+
+.story-item {
+  display: inline-block; /* Ensure child elements stay in a single line */
+  width: 128px; /* Set a fixed width for child elements */
+  flex-shrink: 0; /* Prevent child elements from shrinking */
+}
