--- a/app/globals.css
+++ b/app/globals.css
@@ -17,7 +17,17 @@
   --color-primary-800: #155e75;
   --color-primary-900: #164e63;
 }
+.gradient-background{
+background: hsla(213, 77%, 14%, 1);
 
+background: linear-gradient(90deg, hsla(213, 77%, 14%, 1) 0%, hsla(202, 27%, 45%, 1) 100%);
+
+background: -moz-linear-gradient(90deg, hsla(213, 77%, 14%, 1) 0%, hsla(202, 27%, 45%, 1) 100%);
+
+background: -webkit-linear-gradient(90deg, hsla(213, 77%, 14%, 1) 0%, hsla(202, 27%, 45%, 1) 100%);
+
+filter: progid: DXImageTransform.Microsoft.gradient( startColorstr="#08203E", endColorstr="#557C93", GradientType=1 );
+}
 .font-pops {
   font-family: "Poppins", sans-serif;
 }
