--- a/app/globals.css
+++ b/app/globals.css
@@ -163,7 +163,7 @@
 
 
 #reply .GifPickerReact {
-  @apply h-[400px]   font-pops rounded-2xl border-none bg-transparent !important;
+  @apply h-[400px]   font-pops rounded-none border-none bg-transparent !important;
 }
 .GifPickerReact {
   @apply h-[350px]    lg:h-[450px] bg-transparent font-pops rounded-t-none lg:rounded-tr-2xl lg:rounded-l-none border-none !important;
